--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,6 +6,6 @@
     "outDir": "dist",
     "esModuleInterop": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "config.ts"],
   "exclude": ["node_modules"]
 }
