--- a/backend/package.json
+++ b/backend/package.json
@@ -21,17 +21,17 @@
     "openai": "^6.15.0",
     "pg": "^8.16.3",
     "redis": "^5.10.0",
-    "uuid": "^13.0.0"
-  },
-  "devDependencies": {
+    "uuid": "^13.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "@types/uuid": "^11.0.0",
+    "typescript": "^5.9.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "tsx": "^4.21.0"
   }
 }
