--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "strict": true,
+    "rootDir": "src",
     "outDir": "dist",
-    "esModuleInterop": true
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "module": "commonjs",
+    "target": "ES2020",
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*.ts", "config.ts"],
+  "include": ["src/**/*.ts", "src/config.ts"],
   "exclude": ["node_modules"]
 }
